--- a/src/sidebar/sidebar.scss
+++ b/src/sidebar/sidebar.scss
@@ -2,6 +2,7 @@
 
 .sidebar {
   margin-bottom: 2em;
+  padding: 0 1em;
 
   &__picture {
     display: block;
