--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -41,7 +41,7 @@ h3 {
 
   &--bullet {
     position: relative;
-    margin-left: 1em;
+    margin-left: 1.2em;
 
     @include screen-md {
       margin-left: 0;
